[project]
name = "google-workspace-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "openai>=2.37.0",
    "rich>=15.0.0",
    "workspace-mcp>=1.21.0",
]
